* Minor update: (191222)
- Added [ELFx31, Apache74] to the ALPHA list.

* Minor update: (190929)
- Added [USBSerialdrivers, TomCat9, postgresql, OpenPlexTheatre] to the ALPHA list.
- Disabled [AirSonic, QMadSonic, QSubSonic] in the ALPHA list.
- Added [NZBGet] to the OMEGA list.

* Minor update: (190919)
- Added new 'malware detection and removal' section with [MalwareRemover, MCAFEE_QNAP] to the ALPHA list.
- Added [NvKernelDriver, MultimediaConsole, QuMagieCore, qumagie] to the ALPHA list.

* Minor update: (190417)
- Added [Apache73, XTeve] to the ALPHA list.

* Minor update: (190303)
- Added [MediaInfoCLI, MediaInfoShared, pmp] to the ALPHA list.

* Minor update: (190211)
- Added [PostgreSQLPremium] to the ALPHA list.
- minor code cleanup - no changes to functionality.

* Minor update: (190205)
- Added [HideThatBanner] to the ALPHA list.
- Added [QBazarr, OWatcher3] to the OMEGA list.

* Minor update: (181217)
- Added [QJDK11, PlexPlayer, Windscribe] to the ALPHA list.
- Added [RunLast] to the OMEGA list.
- Move source list display location.

* Minor update: (181113)
- Added [netmgr] to the ALPHA list.
- Small processing speed improvements.
- Shorter log messages.

* Minor update: (181111)
- Added [MySQL8, Brook] to the ALPHA list.

* Minor update: (181109)
- Prefer custom package lists if found. [ALPHA.custom] will be used in place of [ALPHA.default], same for OMEGA.
- Include 'completed' after each logged operation.

* Minor update: (181022)
- Added [Neo4J, WireGuard] to the ALPHA list.
- Added [SonarrTrackTV, QSonarr3, SickChill, QSickChill] to the OMEGA list.

* Minor update: (180909)
- Added [DotNETSDK, firebird] to the ALPHA list.

* Minor update: (180808)
- Moved 'package managers' section ahead of [NVIDIA_GPU_DRV] in the ALPHA list.

* Minor update: (180706)
- Added [QJDK10] to the ALPHA list.

* Minor update: (180630)
- Added new 'multimedia tools' section with [ffmpeg, Qffmpeg] to the ALPHA list.